Bug 697555: Fix UTF-8 handling of args.

The logic for checking for continuation bytes in UTF-8 was
broken. Continuation bytes have the top bit set, but not the top 2
bits set.

This leaves the issue of @files on windows always being taken
as UTF-8.